# python-experimentation

./: README.md  pyproject.toml
notebook/python-tutorial/: basics.ipynb
scripts/: install-kernel.ps1  jupyterlab.ps1
