[tool.poetry]
name = "python-experimentation"
version = "1.0.0"
description = ""
authors = ["Syntrice <syntrice@protonmail.com>"]
readme = "README.md"
#packages = [{include = "python_experimentation"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
